# LibraryProject

./: .env.example  .gitignore  README.md  books.csv  library.db  main.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 5ad8d21867c7_adding_books_rental_and_wishlist_table.py  5da500e63c42_create_user_table.py  d5e44f86c48a_modify_user_table_rename_password_column.py
api/v1/: admin.py  auth.py  router.py  users.py
db/: __init__.py
db/models/: books.py  users.py
schema/: auth.py  books.py  users.py
services/: auth.py  email.py  logger.py  smtpd.py
tests/: conftest.py
tests/api/v1/: test_admin.py  test_auth.py  test_users.py
